syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "events.data.proto";

option csharp_namespace = "Fibertest30.Api";
package fibertest30.reports;

service Reports {
	rpc GetUserActionLines (GetUserActionLinesRequest) returns (GetUserActionLinesResponse);
}

message UserActionLine {
	int32 ordinal = 1;
	string username = 2;
	string clientIp = 3;
    google.protobuf.Timestamp registeredAt = 4;
	int32 logOperationCode = 5;
	string rtuTitle = 6;
	string traceTitle = 7;
	string operationParams = 8;
}

// GetUserActionLines
message GetUserActionLinesRequest {
	string userId = 1;
    events.data.DateTimeFilter dateTimeFilter = 2;
	repeated int32 operationCodes = 3;
}

message GetUserActionLinesResponse {
	repeated UserActionLine lines = 1;
}
